[metadata]
name = emp-wsb
author = singein
author-email = singein@outlook.com
summary = EMP-IDE Websocket-Serialport-Bridge
license = MIT
description-file = 
    README.rst
home-page = https://github.com/EasyMicroPython/EMP-WSB
requires-python = >= 3.4

[files]
packages = 
    emp_wsb


[entry_points]
console_scripts =
    wsb=emp_wsb.cli:entry_points
